@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140630"
-#define public MagickPackageReleaseDate "snapshot-20140630"
+#define public MagickPackageVersionAddendum ".020140711"
+#define public MagickPackageReleaseDate "snapshot-20140711"
